<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Reminder frequency -->

    <TextView
        android:id="@+id/frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/reminder_frequency"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/frequncyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/frequency"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp" >

        <RadioButton
            android:id="@+id/freqDaily"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freq_daily" />

        <RadioButton
            android:id="@+id/freqHourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freq_hourly" />
        
        <RadioButton
            android:id="@+id/freqMinute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freq_minute" />
        
        <RadioButton
            android:id="@+id/freqOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/freq_off" />
    </RadioGroup>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:text="@string/cancel_button" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/submit_button" />

</RelativeLayout>